; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstiles_test.c_turnstile_prim_unlock.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstiles_test.c_turnstile_prim_unlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [46 x i8] c"sysctlbyname unlock called from thread %llu \0A\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"kern.turnstiles_test_unlock\00", align 1
@.str.2 = private unnamed_addr constant [62 x i8] c"sysctlbyname unlock returned from thread %llu with value %d \0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @turnstile_prim_unlock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @turnstile_prim_unlock(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  store i32 %6, i32* %5, align 4
  %7 = call i32 @pthread_threadid_np(i32* null, i32* %4)
  %8 = load i32, i32* %4, align 4
  %9 = call i32 (i8*, i32, ...) @T_LOG(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = call i32 @sysctlbyname(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32* null, i32 0, i32* %5, i32 4)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 (i8*, i32, ...) @T_LOG(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.2, i64 0, i64 0), i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @pthread_threadid_np(i32*, i32*) #1

declare dso_local i32 @T_LOG(i8*, i32, ...) #1

declare dso_local i32 @sysctlbyname(i8*, i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
